i fixed problems