@@ -1,18 +1,21 @@
 package core.basesyntax.service.impl;
 
+import core.basesyntax.exception.FileWriterException;
 import core.basesyntax.service.FileWriter;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Paths;
 
 public class FileWriterImpl implements FileWriter {
     @Override
-    public void writeData(String data, String filePath) {
-        File file = new File(filePath);
+         public void writeData(String text, String createdFilePath) {
+        if (text == null || createdFilePath == null) {
+            throw new FileWriterException("Input can't be null");
+        }
         try {
-            Files.writeString(file.toPath(), data);
+            Files.write(Paths.get(createdFilePath), text.getBytes());
         } catch (IOException e) {
-            throw new RuntimeException("Can't write to file: " + filePath, e);
+            throw new RuntimeException("Can't find file by path: " + createdFilePath, e);
         }
     }
 }
